--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.12.0",
     "firebase-admin": "^11.1.0",
     "micro": "^9.4.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.13.0",
     "react": "17.0.1",
